--- a/BasicHTMLContinued.html
+++ b/BasicHTMLContinued.html
@@ -20,6 +20,8 @@
 
   <p>  <a href="SecondSubfolder.html">This is a link to Clean Teeth</a> </p>
 
+  <p>  <a href="ThirdSubfolder.html">This is a link to Brookfeild Zoo</a> </p>
+
   </body>
 
 </html>
