--- a/BasicHTMLContinued.html
+++ b/BasicHTMLContinued.html
@@ -20,7 +20,7 @@
 
   <p>  <a href="SecondSubfolder.html">This is a link to Clean Teeth</a> </p>
 
-  <p>  <a href="ThirdSubfolder.html">This is a link to Brookfeild Zoo</a> </p>
+  <p>  <a href="ThirdSubfolder.html">This is a link to Brookfield Zoo</a> </p>
 
   </body>
 
